--- a/translations/strings/ai-screening.da.po
+++ b/translations/strings/ai-screening.da.po
@@ -37561,3 +37561,12 @@ msgstr "Dette projekt bliver manuelt evalueret."
 
 msgid "Response"
 msgstr "Svar"
+
+msgid "Task"
+msgstr "Opgave"
+
+msgid "You must ensure that users/citizens that use an AI-system are informed that it is an AI-system."
+msgstr "Du skal sikre at brugere/borgere der anvender et AI-system er oplyst om at det er et AI-system."
+
+msgid "A Fundamental rights impact assessment (FRIA) must always be implemented."
+msgstr "Der skal altid gennemføres Fundamental rights impact assessment (FRIA)."
