--- a/config/sync/language/da/views.view.content_recent.yml
+++ b/config/sync/language/da/views.view.content_recent.yml
@@ -1,10 +1,10 @@
-label: 'Recent content'
-description: 'Recent content.'
+label: 'Seneste indhold'
+description: 'Seneste indhold.'
 display:
   default:
-    display_title: Default
+    display_title: Standard
     display_options:
-      title: 'Recent content'
+      title: 'Seneste indhold'
       fields:
         changed:
           separator: ', '
@@ -12,12 +12,12 @@ display:
         options:
           submit_button: Anvend
           reset_button_label: Nulstil
-          exposed_sorts_label: 'Sort by'
-          sort_asc_label: Asc
-          sort_desc_label: Desc
+          exposed_sorts_label: 'Sorter efter'
+          sort_asc_label: Stigende
+          sort_desc_label: Faldende
       empty:
         area_text_custom:
-          content: 'No content available.'
-      use_more_text: More
+          content: 'Intet indhold.'
+      use_more_text: Mere
   block_1:
-    display_title: Block
+    display_title: Blok
