--- a/config/sync/language/da/views.view.files.yml
+++ b/config/sync/language/da/views.view.files.yml
@@ -1,59 +1,59 @@
-label: Files
-description: 'Find and manage files.'
+label: Filer
+description: 'Find og håndtér filer.'
 display:
   default:
-    display_title: Default
+    display_title: Standard
     display_options:
-      title: Files
+      title: Filer
       fields:
         fid:
           label: Fid
         filename:
-          label: Name
+          label: Navn
           separator: ', '
         filemime:
           label: 'MIME type'
         filesize:
-          label: Size
+          label: Størrelse
         status:
           label: Status
           settings:
-            format_custom_false: Temporary
+            format_custom_false: Midlertidig
             format_custom_true: Permanent
         created:
-          label: 'Upload date'
+          label: Upload-dato
         changed:
-          label: 'Changed date'
+          label: Ændringsdato
         count:
-          label: 'Used in'
+          label: 'Brugt i'
           alter:
             path: 'admin/content/files/usage/{{ fid }}'
           format_plural_string: !!binary MSBwbGFjZQNAY291bnQgcGxhY2Vz
         operations:
-          label: Operations
+          label: Handlinger
       pager:
         options:
           tags:
             next: 'Næste ›'
             previous: '‹ Forrige'
           expose:
-            items_per_page_label: 'Items per page'
-            items_per_page_options_all_label: '- All -'
-            offset_label: Offset
+            items_per_page_label: 'Antal elementer'
+            items_per_page_options_all_label: '- Alle -'
+            offset_label: Forskydning
       exposed_form:
         options:
           submit_button: Filter
           reset_button_label: Nulstil
-          exposed_sorts_label: 'Sort by'
-          sort_asc_label: Asc
-          sort_desc_label: Desc
+          exposed_sorts_label: 'Sorter efter'
+          sort_asc_label: Stigende
+          sort_desc_label: Faldende
       empty:
         area_text_custom:
-          content: 'No files available.'
+          content: 'Ingen tilgængelige filer.'
       filters:
         filename:
           expose:
-            label: Filename
+            label: Filnavn
         filemime:
           expose:
             label: 'MIME type'
@@ -61,10 +61,10 @@ display:
           expose:
             label: Status
   page_1:
-    display_title: 'Files overview'
+    display_title: Filoversigt
     display_options:
       menu:
-        title: Files
+        title: Filer
   page_2:
     display_title: 'File usage'
     display_options:
@@ -73,11 +73,11 @@ display:
         entity_label:
           label: Entity
         type:
-          label: 'Entity type'
+          label: Entity-type
         module:
-          label: 'Registering module'
+          label: 'Registrerer modul'
         count:
-          label: 'Use count'
+          label: 'Brug antal'
           format_plural_string: !!binary MQNAY291bnQ=
       pager:
         options:
@@ -85,11 +85,11 @@ display:
             next: 'Næste ›'
             previous: '‹ Forrige'
           expose:
-            items_per_page_label: 'Items per page'
-            items_per_page_options_all_label: '- All -'
-            offset_label: Offset
+            items_per_page_label: 'Antal elementer'
+            items_per_page_options_all_label: '- Alle -'
+            offset_label: Forskydning
       arguments:
         fid:
           exception:
-            title: All
-          title: 'File usage information for {{ arguments.fid }}'
+            title: Alle
+          title: 'Information om brug af filen {{ arguments.fid }}'
