--- a/config/sync/language/da/views.view.glossary.yml
+++ b/config/sync/language/da/views.view.glossary.yml
@@ -1,36 +1,36 @@
-label: Glossary
-description: 'All content, by letter.'
+label: Ordliste
+description: 'Alt indhold efter forbogstav.'
 display:
   default:
-    display_title: Default
+    display_title: Standard
     display_options:
       fields:
         title:
           label: Titel
         name:
-          label: Author
+          label: Forfatter
         changed:
-          label: 'Last update'
+          label: 'Seneste opdatering'
       pager:
         options:
           tags:
             next: ››
             previous: ‹‹
           expose:
-            items_per_page_label: 'Items per page'
-            items_per_page_options_all_label: '- All -'
-            offset_label: Offset
+            items_per_page_label: 'Antal elementer'
+            items_per_page_options_all_label: '- Alle -'
+            offset_label: Forskydning
       exposed_form:
         options:
           submit_button: Anvend
           reset_button_label: Nulstil
-          exposed_sorts_label: 'Sort by'
-          sort_asc_label: Asc
-          sort_desc_label: Desc
+          exposed_sorts_label: 'Sorter efter'
+          sort_asc_label: Stigende
+          sort_desc_label: Faldende
   attachment_1:
-    display_title: Attachment
+    display_title: Bilag
   page_1:
-    display_title: Page
+    display_title: Side
     display_options:
       menu:
-        title: Glossary
+        title: Ordliste
