--- a/web/modules/custom/ai_screening_project_track/translations/ai_screening_project_track.da.po
+++ b/web/modules/custom/ai_screening_project_track/translations/ai_screening_project_track.da.po
@@ -28,8 +28,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PROJECT VERSION\n"
-"POT-Creation-Date: 2025-03-28 14:40+0100\n"
-"PO-Revision-Date: 2025-03-28 14:40+0100\n"
+"POT-Creation-Date: 2025-03-31 15:15+0200\n"
+"PO-Revision-Date: 2025-03-31 15:15+0200\n"
 "Last-Translator: NAME <EMAIL@ADDRESS>\n"
 "Language-Team: Danish <EMAIL@ADDRESS>\n"
 "MIME-Version: 1.0\n"
@@ -91,11 +91,11 @@ msgstr "ID"
 
 #: modules/custom/ai_screening_project_track/src/ProjectTrackListBuilder.php:20 modules/custom/ai_screening_project_track/src/ProjectTrackToolListBuilder.php:23
 msgid "Created"
-msgstr "Oprettet"
+msgstr "Created"
 
 #: modules/custom/ai_screening_project_track/src/ProjectTrackListBuilder.php:21 modules/custom/ai_screening_project_track/src/ProjectTrackToolListBuilder.php:24
 msgid "Updated"
-msgstr "Opdateret"
+msgstr "Updated"
 
 #: modules/custom/ai_screening_project_track/src/ProjectTrackToolListBuilder.php:20
 msgid "Label"
@@ -107,7 +107,7 @@ msgstr "Status"
 
 #: modules/custom/ai_screening_project_track/src/ProjectTrackToolListBuilder.php:22
 msgid "Author"
-msgstr "Forfatter"
+msgstr "Author"
 
 #: modules/custom/ai_screening_project_track/src/ProjectTrackToolListBuilder.php:35
 msgid "Enabled"
@@ -131,7 +131,7 @@ msgstr ""
 
 #: modules/custom/ai_screening_project_track/src/Status.php:24
 msgid "Completed"
-msgstr "Afsluttet"
+msgstr "Completed"
 
 #: modules/custom/ai_screening_project_track/src/Element/YesNoStop.php:37
 msgid "- Select -"
@@ -275,7 +275,7 @@ msgstr ""
 
 #: modules/custom/ai_screening_project_track/src/Entity/ProjectTrackTool.php:18
 msgid "Tools"
-msgstr "Værktøjer"
+msgstr "Tools"
 
 #: modules/custom/ai_screening_project_track/src/Entity/ProjectTrackTool.php:18
 msgid "tool"
