--- a/web/themes/custom/itkdev/itkdev_base_theme/translations/itkdev_base_theme.da.po
+++ b/web/themes/custom/itkdev/itkdev_base_theme/translations/itkdev_base_theme.da.po
@@ -18,8 +18,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PROJECT VERSION\n"
-"POT-Creation-Date: 2025-03-28 14:41+0100\n"
-"PO-Revision-Date: 2025-03-28 14:41+0100\n"
+"POT-Creation-Date: 2025-03-31 15:15+0200\n"
+"PO-Revision-Date: 2025-03-31 15:15+0200\n"
 "Last-Translator: NAME <EMAIL@ADDRESS>\n"
 "Language-Team: Danish <EMAIL@ADDRESS>\n"
 "MIME-Version: 1.0\n"
@@ -49,11 +49,11 @@ msgstr "Navigation"
 
 #: themes/custom/itkdev/itkdev_base_theme/itkdev_base_theme.info.yml:0
 msgid "Content"
-msgstr "Indhold"
+msgstr "Content"
 
 #: themes/custom/itkdev/itkdev_base_theme/itkdev_base_theme.info.yml:0
 msgid "Footer"
-msgstr "Sidefod"
+msgstr "Footer"
 
 #: themes/custom/itkdev/itkdev_base_theme/build/app.js:0
 msgid "Select"
@@ -85,11 +85,11 @@ msgstr "Brødkrumme"
 
 #: themes/custom/itkdev/itkdev_base_theme/templates/components/menu-local-tasks.html.twig:19
 msgid "Primary tabs"
-msgstr "Primære tabs"
+msgstr "Primary tabs"
 
 #: themes/custom/itkdev/itkdev_base_theme/templates/components/menu-local-tasks.html.twig:23
 msgid "Secondary tabs"
-msgstr "Sekundære tabs"
+msgstr "Secondary tabs"
 
 #: themes/custom/itkdev/itkdev_base_theme/templates/components/nav-button.html.twig:2
 msgid "Open navigation menu"
@@ -113,7 +113,7 @@ msgstr "Editor"
 
 #: themes/custom/itkdev/itkdev_base_theme/templates/components/user-menu.html.twig:5
 msgid "User"
-msgstr "Bruger"
+msgstr "User"
 
 #: themes/custom/itkdev/itkdev_base_theme/templates/components/user-menu.html.twig:29
 msgid "My profile"
