--- a/translations/site-translations.da.po
+++ b/translations/site-translations.da.po
@@ -3,8 +3,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PROJECT VERSION\n"
-"POT-Creation-Date: 2025-03-31 16:08+0200\n"
-"PO-Revision-Date: 2025-03-31 16:08+0200\n"
+"POT-Creation-Date: 2025-04-01 14:49+0200\n"
+"PO-Revision-Date: 2025-04-01 14:49+0200\n"
 "Last-Translator: NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <EMAIL@ADDRESS>\n"
 "MIME-Version: 1.0\n"
@@ -12,23 +12,250 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
+msgid "Title"
+msgstr "Titel"
+
+msgid "delete"
+msgstr "slet"
+
+msgid "Register"
+msgstr "Opret konto"
+
+msgid "Delete"
+msgstr "Slet"
+
+msgid "Submit"
+msgstr "Indsend"
+
+msgid "Operations"
+msgstr "Handlinger"
+
+msgid "Content"
+msgstr "Indhold"
+
+msgid "Username"
+msgstr "Brugernavn"
+
+msgid "Author"
+msgstr "Forfatter"
+
+msgid "List"
+msgstr "Vis"
+
+msgid "Language"
+msgstr "Sprog"
+
+msgid "more"
+msgstr "mere"
+
+msgid "More"
+msgstr "Mere"
+
+msgid "Action"
+msgstr "Handling"
+
+msgid "view"
+msgstr "vis"
+
+msgid "Date"
+msgstr "Dato"
+
+msgid "Size"
+msgstr "Størrelse"
+
 msgid "Reset"
 msgstr "Nulstil"
+
+msgid "Use count"
+msgstr "Brug antal"
+
+msgid "Message"
+msgstr "Meddelelse"
+
+msgid "No log messages available."
+msgstr "Ingen logbeskeder til rådighed."
+
+msgid "Name"
+msgstr "Navn"
+
+msgid "edit"
+msgstr "redigér"
+
+msgid "Taxonomy term"
+msgstr "Ord i ordforråd"
+
+msgid "Preview"
+msgstr "Gennemse"
+
+msgid "Default"
+msgstr "Standard"
+
+msgid "Archive"
+msgstr "Arkiv"
+
+msgid "Icon"
+msgstr "Ikon"
+
+msgid "Filename"
+msgstr "Filnavn"
+
+msgid "Teaser"
+msgstr "Smagsprøve"
+
+msgid "Updated"
+msgstr "Opdateret"
+
+msgid "Attachment"
+msgstr "Bilag"
+
+msgid "User"
+msgstr "Bruger"
+
+msgid "Content type"
+msgstr "Indholdstype"
+
+msgid "Files"
+msgstr "Filer"
+
+msgid "Created"
+msgstr "Oprettet"
+
+msgid "All"
+msgstr "Alle"
+
+msgid "Active"
+msgstr "Aktiv"
+
+msgid "Page title"
+msgstr "Sidetitel"
+
+msgid "Block"
+msgstr "Blok"
+
+msgid "Page"
+msgstr "Side"
+
+msgid "Footer"
+msgstr "Sidefod"
+
+msgid "Roles"
+msgstr "Roller"
 
 msgid "Published"
 msgstr "Publiseret"
 
+msgid "Last access"
+msgstr "Seneste tilgang"
+
+msgid "Severity"
+msgstr "Grad"
+
+msgid "Watchdog"
+msgstr "Hændelseslog"
+
+msgid "Last update"
+msgstr "Seneste opdatering"
+
+msgid "Nodes"
+msgstr "Indhold"
+
+msgid "Plain text"
+msgstr "Ren tekst"
+
+msgid "Desc"
+msgstr "Faldende"
+
+msgid "Role"
+msgstr "Rolle"
+
+msgid "External"
+msgstr "Eksterne"
+
+msgid ""
+"@site is currently under maintenance. We should be back shortly. Thank "
+"you for your patience."
+msgstr ""
+"Vi er ved at opdatere @site. Vi er snart tilbage. Tak for din "
+"tålmodighed."
+
+msgid "Anonymous"
+msgstr "Anonym"
+
+msgid "Tools"
+msgstr "Værktøjer"
+
 msgid "Sort by"
 msgstr "Sorter efter"
+
+msgid "English"
+msgstr "Engelsk"
+
+msgid "Member for"
+msgstr "Medlem i"
+
+msgid "People"
+msgstr "Personer"
+
+msgid "Blocked"
+msgstr "Blokeret"
+
+msgid "Glossary"
+msgstr "Ordliste"
+
+msgid "‹ Previous"
+msgstr "‹ Forrige"
+
+msgid "Next ›"
+msgstr "Næste ›"
 
 msgid "Unpublished"
 msgstr "Ikke publiseret"
 
+msgid "Tabs"
+msgstr "Faner"
+
+msgid "Shortcuts"
+msgstr "Genveje"
+
 msgid "Apply"
 msgstr "Anvend"
 
+msgid "Used in"
+msgstr "Brugt i"
+
+msgid "Permission"
+msgstr "Tilladelse"
+
+msgid ""
+"A user is considered online for this long after they have last viewed "
+"a page."
+msgstr ""
+"En bruger bliver opfattet som online i dette tidsrum efter hun sidst "
+"har set en side."
+
+msgid "Offset"
+msgstr "Forskydning"
+
+msgid "Publish content"
+msgstr "Udgiv indhold"
+
+msgid "Entity type"
+msgstr "Entity-type"
+
+msgid "User account"
+msgstr "Brugerkonto"
+
+msgid "Main navigation"
+msgstr "Primær navigation"
+
+msgid "Not applicable"
+msgstr "Ikke relevant"
+
 msgid "No content available."
 msgstr "Intet indhold."
+
+msgid "IP address"
+msgstr "IP-adresse"
 
 msgid "Primary tabs"
 msgstr "Primære tabs"
@@ -36,14 +263,540 @@ msgstr "Primære tabs"
 msgid "Secondary tabs"
 msgstr "Sekundære tabs"
 
+msgid "Temporary"
+msgstr "Midlertidig"
+
+msgid "No files available."
+msgstr "Ingen tilgængelige filer."
+
+msgid "Frontpage"
+msgstr "Forside"
+
+msgid "Upload date"
+msgstr "Upload-dato"
+
+msgid "Search index"
+msgstr "Søgeindex"
+
+msgid "@interval ago"
+msgstr "@interval siden"
+
+msgid "Items per page"
+msgstr "Antal elementer"
+
+msgid "- All -"
+msgstr "- Alle -"
+
+msgid "Compact"
+msgstr "Kompakt"
+
+msgid "Who's new"
+msgstr "Nye brugere"
+
+msgid "Who's online"
+msgstr "Hvem er online"
+
+msgid "« First"
+msgstr "« Første"
+
+msgid "Last »"
+msgstr "Sidste »"
+
+msgid "Breadcrumbs"
+msgstr "Brødkrummer"
+
+msgid "Status messages"
+msgstr "Statusmeddelelser"
+
+msgid "Delete content"
+msgstr "Slet indhold"
+
 msgid "Published status"
 msgstr "Publiseringsstatus status"
+
+msgid "Monthly archive"
+msgstr "Månedsarkiv"
+
+msgid "Main page content"
+msgstr "Primært sideindhold"
+
+msgid "Full content"
+msgstr "Fuldt indhold"
+
+msgid "Recent content"
+msgstr "Seneste indhold"
+
+msgid "Unpublish content"
+msgstr "Afpublicér indhold"
+
+msgid "Make content sticky"
+msgstr "Gør indhold klæbrigt"
+
+msgid "Make content unsticky"
+msgstr "Fjern klæbrighed"
+
+msgid "Promote content to front page"
+msgstr "Vis indhold på forsiden"
+
+msgid "Remove content from front page"
+msgstr "Fjern indhold fra forsiden"
+
+msgid "Save content"
+msgstr "Gem indhold"
+
+msgid "Find and manage content."
+msgstr "Find og håndtér indhold."
+
+msgid "Taxonomy term page"
+msgstr "Termside"
+
+msgid "No people available."
+msgstr "Ingen personer til rådighed."
+
+msgid "An administrator created an account for you at [site:name]"
+msgstr "En administrator har oprettet en konto til dig på [site:name]"
+
+msgid "Find and manage people interacting with your site."
+msgstr "Find og håndtér personer som bruger dit site."
+
+msgid "visible"
+msgstr "synlig"
+
+msgid "Bulk update"
+msgstr "Masseopdatering"
+
+msgid "Recent log messages"
+msgstr "Seneste logmeddelelser"
+
+msgid "Manage user accounts, roles, and permissions."
+msgstr "Håndtér brugerkonti, roller og tilladelser."
+
+msgid "Changed date"
+msgstr "Ændringsdato"
+
+msgid "Asc"
+msgstr "Stigende"
+
+msgid "Not specified"
+msgstr "Ikke angivet"
+
+msgid "Wide"
+msgstr "Bred"
+
+msgid "Displaying @start - @end of @total"
+msgstr "Viser @start - @end af @total"
+
+msgid "Publish taxonomy term"
+msgstr "Publicér taksonomiterm"
+
+msgid "Unpublish taxonomy term"
+msgstr "Afpublicér taksonomiterm"
+
+msgid "Welcome!"
+msgstr "Velkommen!"
+
+msgid "Registering module"
+msgstr "Registrerer modul"
+
+msgid "Fallback date format"
+msgstr "Reservedatoformat"
 
 msgid "Site branding"
 msgstr "Branding"
 
+msgid "Search result highlighting input"
+msgstr "Søgeresultat med fremhævelse af input"
+
+msgid "Primary admin actions"
+msgstr "Primære administratorhandlinger"
+
+msgid "Large (480×480)"
+msgstr "Stor (480×480)"
+
+msgid "Medium (220×220)"
+msgstr "Mellem (220×220)"
+
+msgid "Default long date"
+msgstr "Standard lang dato"
+
+msgid "Default medium date"
+msgstr "Standard mellem dato"
+
+msgid "Default short date"
+msgstr "Standard kort dato"
+
+msgid "User account menu"
+msgstr "Brugerkontomenu"
+
+msgid "Block the selected user(s)"
+msgstr "Blokér de(n) valgte bruger(e)"
+
+msgid "Cancel the selected user account(s)"
+msgstr "Opsig de valgte brugerkonti"
+
+msgid "Unblock the selected user(s)"
+msgstr "Fjern blokering af de(n) valgte bruger(e)"
+
+msgid "Account cancellation request for [user:display-name] at [site:name]"
+msgstr ""
+"Anmodning om opsigelse af konto for [user:display-name] på "
+"[site:name]"
+
+msgid "Replacement login information for [user:display-name] at [site:name]"
+msgstr "Ny login-information for [user:display-name] på [site:name]"
+
+msgid "Account details for [user:display-name] at [site:name]"
+msgstr "Kontoinformationer for [user:display-name] på [site:name] (blokeret)"
+
+msgid ""
+"Account details for [user:display-name] at [site:name] (pending admin "
+"approval)"
+msgstr ""
+"Kontoinformation for [user:display-name] på [site:name] (afventer "
+"godkendelse af administrator)"
+
+msgid ""
+"[user:display-name] has applied for an account.\n"
+"\n"
+"[user:edit-url]"
+msgstr ""
+"[user:display-name] har anmodet om en konto.\n"
+"\n"
+"[user:edit-url]"
+
+msgid ""
+"[user:display-name],\n"
+"\n"
+"Your account at [site:name] has been "
+"activated.\n"
+"\n"
+"You may now log in by clicking this link or copying "
+"and pasting it into your "
+"browser:\n"
+"\n"
+"[user:one-time-login-url]\n"
+"\n"
+"This link can only be "
+"used once to log in and will lead you to a page where you can set your "
+"password.\n"
+"\n"
+"After setting your password, you will be able to log in "
+"at [site:login-url] in the future using:\n"
+"\n"
+"username: "
+"[user:account-name]\n"
+"password: Your password\n"
+"\n"
+"--  [site:name] "
+"team"
+msgstr ""
+"[user:display-name],\r\n"
+"\r\n"
+"Din konto på [site:name] er blevet "
+"aktiveret.\r\n"
+"\r\n"
+"Du kan logge ind ved at klikke på følgende link "
+"eller ved at kopiere og indsætte det i din "
+"browser:\r\n"
+"\r\n"
+"[user:one-time-login-url]\r\n"
+"\r\n"
+"Linket kan kun "
+"bruges én gang, og det fører dig til en side, hvor du kan vælge din "
+"adgangskode.\r\n"
+"\r\n"
+"Når du har valgt en adgangskode kan du fremover "
+"logge ind på [site:login-url] med:\r\n"
+"\r\n"
+"Brugernavn: "
+"[user:account-name]\r\n"
+"Adgangskode: Din adgangskode\r\n"
+"\r\n"
+"--  "
+"Holdet bag [site:name]"
+
+msgid "Account details for [user:display-name] at [site:name] (approved)"
+msgstr "Kontoinformationer for [user:display-name] på [site:name] (godkendt)"
+
+msgid "Account details for [user:display-name] at [site:name] (blocked)"
+msgstr "Kontoinformationer for [user:display-name] på [site:name] (blokeret)"
+
+msgid ""
+"[user:display-name],\n"
+"\n"
+"Your account on [site:name] has been "
+"canceled.\n"
+"\n"
+"--  [site:name] team"
+msgstr ""
+"[user:display-name],\n"
+"\n"
+"Din konto på [site:name] er blevet "
+"lukket.\n"
+"\n"
+"--  [site:name] holdet"
+
+msgid "Account details for [user:display-name] at [site:name] (canceled)"
+msgstr "Kontoinformationer for [user:display-name] på [site:name] (opsagt)"
+
+msgid "Links related to the active user account"
+msgstr "Links relateret til den aktive brugerkonto"
+
+msgid "Administrative task links"
+msgstr "Links til administrative opgaver"
+
+msgid "Site information links"
+msgstr "Links til informationen om sitet"
+
+msgid "Site section links"
+msgstr "Links til sitets sektioner"
+
+msgid "User tool links, often added by modules"
+msgstr "Bruger værktøjslinks, som typisk tilføjes af moduler"
+
+msgid ""
+"[user:display-name],\n"
+"\n"
+"A request to reset the password for your "
+"account has been made at [site:name].\n"
+"\n"
+"You may now log in by "
+"clicking this link or copying and pasting it into your "
+"browser:\n"
+"\n"
+"[user:one-time-login-url]\n"
+"\n"
+"This link can only be "
+"used once to log in and will lead you to a page where you can set your "
+"password. It expires after one day and nothing will happen if it's not "
+"used.\n"
+"\n"
+"--  [site:name] team"
+msgstr ""
+"[user:display-name],\n"
+"\n"
+"Der er lavet en forespørgsel om at "
+"nulstille adgangskoden til din konto på [site:name].\n"
+"\n"
+"Du kan "
+"logge ind nu ved at klikke på linket eller ved at kopiere og "
+"indsætte det i din browser:\n"
+"\n"
+"[user:one-time-login-url]\n"
+"\n"
+"Dette "
+"link kan kun bruges til at logge ind én gang, og det sender dig til "
+"en side hvor du kan vælge en adgangskode. Linket udløber efter én "
+"dag og der sker ikke noget hvis det ikke bruges.\n"
+"\n"
+"-- Holdet bag "
+"[site:name]"
+
+msgid ""
+"[user:display-name],\n"
+"\n"
+"A site administrator at [site:name] has "
+"created an account for you. You may now log in by clicking this link "
+"or copying and pasting it into your "
+"browser:\n"
+"\n"
+"[user:one-time-login-url]\n"
+"\n"
+"This link can only be "
+"used once to log in and will lead you to a page where you can set your "
+"password.\n"
+"\n"
+"After setting your password, you will be able to log in "
+"at [site:login-url] in the future using:\n"
+"\n"
+"username: "
+"[user:name]\n"
+"password: Your password\n"
+"\n"
+"--  [site:name] team"
+msgstr ""
+"[user:display-name],\n"
+"\n"
+"En administrator på [site:name] har "
+"oprettet en konto til dig. Du kan logge ind ved at klikke på linket "
+"eller ved at kopiere og indsætte det i din "
+"browser:\n"
+"\n"
+"[user:one-time-login-url]\n"
+"\n"
+"Dette link kan kun bruges "
+"til at logge ind, og det sender dig til en side hvor du kan vælge en "
+"adgangskode.\n"
+"\n"
+"Når du har valgt en adgangskode kan du logge ind "
+"på [site:login-url] med:\n"
+"\n"
+"Brugernavn: [user:name]\n"
+"Adgangskode: "
+"Din adgangskode\n"
+"\n"
+"--  Holdet bag [site:name]"
+
+msgid ""
+"[user:display-name],\n"
+"\n"
+"Thank you for registering at [site:name]. "
+"You may now log in by clicking this link or copying and pasting it "
+"into your browser:\n"
+"\n"
+"[user:one-time-login-url]\n"
+"\n"
+"This link can "
+"only be used once to log in and will lead you to a page where you can "
+"set your password.\n"
+"\n"
+"After setting your password, you will be able "
+"to log in at [site:login-url] in the future using:\n"
+"\n"
+"username: "
+"[user:name]\n"
+"password: Your password\n"
+"\n"
+"--  [site:name] team"
+msgstr ""
+"[user:display-name],\n"
+"\n"
+"Tak fordi du har oprettet dig som bruger på "
+"[site:name]. Du kan nu logge ind ved at klikke på linket eller ved at "
+"kopiere og indsætte det i din "
+"browser:\n"
+"\n"
+"[user:one-time-login-url]\n"
+"\n"
+"Dette link kan kun bruges "
+"til at logge ind, og det sender dig til en side hvor du kan vælge en "
+"adgangskode.\n"
+"\n"
+"Når du har valgt en adgangskode kan du logge ind "
+"på [site:login-url] med:\n"
+"\n"
+"Brugernavn: [user:name]\n"
+"Adgangskode: "
+"Din adgangskode\n"
+"\n"
+"--  Holdet bag [site:name]"
+
+msgid "Find and manage files."
+msgstr "Find og håndtér filer."
+
+msgid "All content, by month."
+msgstr "Alt indhold, efter måned."
+
+msgid "Recent content."
+msgstr "Seneste indhold."
+
+msgid "All content promoted to the front page."
+msgstr "Alt indhold som vises på forsiden."
+
+msgid "All content, by letter."
+msgstr "Alt indhold efter forbogstav."
+
+msgid "Content belonging to a certain taxonomy term."
+msgstr "Indhold som er knyttet til en bestemt term."
+
+msgid "Shows a list of the newest user accounts on the site."
+msgstr "Viser en liste af de nyeste brugerkonti på sitet."
+
+msgid "Who's online block"
+msgstr "Hvem er online"
+
+msgid ""
+"Shows the user names of the most recently active users, and the total "
+"number of active users."
+msgstr ""
+"Viser navnene på de brugere, der senste har været aktive, og det "
+"totale antal af aktive brugere."
+
+msgid "Narrow"
+msgstr "Smal"
+
+msgid "Files overview"
+msgstr "Filoversigt"
+
+msgid "File usage information for {{ arguments.fid }}"
+msgstr "Information om brug af filen {{ arguments.fid }}"
+
+msgid "Find and manage content"
+msgstr "Find og håndtér indhold"
+
 msgid "Name or email contains"
 msgstr "Navn eller email indeholder"
+
+msgid "A list of new users"
+msgstr "En liste af nye brugere"
+
+msgid "There are currently @total users online."
+msgstr "Der er i øjeblikket @total brugere online."
+
+msgid "There are currently 0 users online."
+msgstr "Der er i øjeblikket 0 brugere online."
+
+msgid "A list of users that are currently logged in."
+msgstr "En liste af indloggede brugere."
+
+msgid ""
+"[user:display-name],\n"
+"\n"
+"Your account on [site:name] has been "
+"blocked.\n"
+"\n"
+"--  [site:name] team"
+msgstr ""
+"[user:display-name],\r\n"
+"\r\n"
+"Din konto på [site:name] er blevet "
+"blokeret.\r\n"
+"\r\n"
+"--  [site:name] team"
+
+msgid ""
+"No front page content has been created yet.<br/>Follow the <a "
+"target=\"_blank\" "
+"href=\"https://www.drupal.org/docs/user_guide/en/index.html\">User "
+"Guide</a> to start building your site."
+msgstr ""
+"Der er ikke oprettet noget indhold på forsiden endnu.<br />Læs <a "
+"target=\"_blank\" "
+"href=\"https://www.drupal.org/docs/user_guide/en/index.html\">manualen</a> "
+"for at komme i gang med at bygge din hjemmeside."
+
+msgid ""
+"[user:display-name],\n"
+"\n"
+"Thank you for registering at [site:name]. "
+"Your application for an account is currently pending approval. Once it "
+"has been approved, you will receive another email containing "
+"information about how to log in, set your password, and other "
+"details.\n"
+"\n"
+"--  [site:name] team"
+msgstr ""
+"[bruger:vist navn],\n"
+"\n"
+"Tak for din tilmelding på [site:name]. Din "
+"ansøgning om en konto afventer i øjeblikket godkendelse. Når den er "
+"godkendt, modtager du en anden e-mail med oplysninger om, hvordan du "
+"logger ind, angiver din adgangskode og andre detaljer.\n"
+"\n"
+"-- "
+"[site:name] holdet"
+
+msgid "@interval hence"
+msgstr "om @interval"
+
+msgid "Wide (1090)"
+msgstr "Bred (1090)"
+
+msgid "Drupal user"
+msgstr "Drupal bruger"
+
+msgid "Authentication name"
+msgstr "Autentificeringsnavn"
 
 msgctxt "PHP date format"
 msgid "l, j F Y - H:i"
@@ -106,5 +859,8 @@ msgstr "Afsluttet"
 
 msgid "Danish"
 msgstr "Dansk"
+
+msgid "Please log in to access the uploaded file."
+msgstr "<p>Please log in to access the uploaded file.</p>"
 
 
