--- a/web/modules/custom/ai_screening_project/translations/ai_screening_project.da.po
+++ b/web/modules/custom/ai_screening_project/translations/ai_screening_project.da.po
@@ -12,8 +12,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PROJECT VERSION\n"
-"POT-Creation-Date: 2025-03-31 16:07+0200\n"
-"PO-Revision-Date: 2025-03-31 16:07+0200\n"
+"POT-Creation-Date: 2025-04-22 13:03+0200\n"
+"PO-Revision-Date: 2025-04-22 13:03+0200\n"
 "Last-Translator: NAME <EMAIL@ADDRESS>\n"
 "Language-Team: Danish <EMAIL@ADDRESS>\n"
 "MIME-Version: 1.0\n"
@@ -51,11 +51,11 @@ msgstr ""
 
 #: modules/custom/ai_screening_project/src/Helper/ProjectHelper.php:354
 msgid "Project group"
-msgstr ""
+msgstr "Projectgruppe"
 
 #: modules/custom/ai_screening_project/src/Helper/ProjectHelper.php:359
 msgid "Project owner"
-msgstr ""
+msgstr "Projektejer"
 
 #: modules/custom/ai_screening_project/src/Helper/ProjectHelper.php:368
 msgid "Contributors"
